src/test/ui/lifetime-errors/ex1-return-one-existing-name-if-else-3.stderr
error[E0612]: explicit lifetime required in the type of pattern
  --> $DIR/ex1-return-one-existing-name-if-else-3.rs:11:12
   |
11 | fn foo<'a>((x, y): (&'a i32, &i32)) -> &'a i32 {
   |            ^^^^^^ consider changing type of pattern to `(&'a i32, &'a i32)`
12 |     if x > y { x } else { y }
   |                           - lifetime `'a` required

error: aborting due to previous error

